# University

./: Aguilar_Islas_T11.rar  PRO NUEVO.c  PROYECTO-N1.txt  PROYECTO.c  PROYECTOv1.c  hola.txt  main.c
EstructuraDeDatos/ACT-1/: main.cpp
EstructuraDeDatos/Actividad04-PilaYCola/: CMakeLists.txt
EstructuraDeDatos/Actividad04-PilaYCola/logic/: MenuLogic.cpp
EstructuraDeDatos/Actividad04-PilaYCola/logic/utils/: Utils.cpp  Utils.h
EstructuraDeDatos/Actividad04-PilaYCola/logic/utils/Execeptions/: Exception.h
EstructuraDeDatos/Actividad04-PilaYCola/model/dto/: Cola.h  Menu.h  Pila.h
EstructuraDeDatos/inventory/: CMakeLists.txt  GenericTypeTest.cpp  GenericTypeTest.h  List.cpp  List.h  main.cpp
EstructuraDeDatos/inventory/exceptions/: ListException.h
EstructuraDeDatos/inventory/logic/: InventoryLogic.cpp  InventoryLogic.h  MenuLogic.cpp  MenuLogic.h  ProductLogic.cpp  ProductLogic.h
EstructuraDeDatos/inventory/logic/utils/: Utils.cpp  Utils.h
EstructuraDeDatos/inventory/model/dto/: Date.cpp  Menu.cpp  Product.cpp
EstructuraDeDatos/inventory/model/include/: Date.h  Menu.h  Product.h
EstructuraDeDatos/radioStation/: CMakeLists.txt  main.cpp
EstructuraDeDatos/radioStation/logic/: MenuLogic.h  RadioStationLogic.cpp  RadioStationLogic.h  SongLogic.cpp  SongLogic.h
EstructuraDeDatos/radioStation/logic/utils/: Utils.cpp  Utils.h
EstructuraDeDatos/radioStation/model/dto/: List.h  Menu.cpp  Song.cpp  Song.h
ProgramacionD3221A/: Aguilar_Islas_T9.rar  README.md
ProgramacionD3221A/tarea 10/: ejercicio1.c
ProgramacionD3221A/tarea 5/: CMakeLists.txt  main.c
ProgramacionD3221A/tarea 6/: Aguilar_Islas_T6.rar  CMakeLists.txt  main.c
ProgramacionD3221A/tarea 7/: Aguilar_Islas_T7.rar  CMakeLists.txt  main.c
ProgramacionD3221A/tarea 8/: main.c
ProgramacionD3221A/tarea 9/: main.c
SSP-EstructuraDeDatos/: Tarea-2-Josue-Norberto-Aguilar-Islas.rar  Time.rar
(+48 files in other folders)
